# rosaria2

./: CMakeLists.txt
config/: rosaria2_params.yaml
src/: laser_publisher.cpp  rosaria2_node.cpp
